Adjust word breaking for slide title to avoid overlapping

--- a/carousel.css
+++ b/carousel.css
@@ -17,6 +17,9 @@
 	padding: 1rem;
 	height: 100%;
 }
+.carousel .slide-info-title {
+    word-break: break-word;
+}
 .carousel .slide-more {
 	width:100%;
 }
